syntax = "proto3";
package bpfd;
option go_package = "github.com/redhat-et/clients/gobpfd;gobpfd";

service Loader {
    rpc Load (LoadRequest) returns (LoadResponse);
    rpc Unload (UnloadRequest) returns (UnloadResponse);
    rpc List (ListRequest) returns (ListResponse);
    rpc GetMap (GetMapRequest) returns (GetMapResponse);
}

enum ProgramType {
    XDP = 0;
    TC_INGRESS = 1;
    TC_EGRESS = 2;
}

enum ProceedOn {
    ABORTED = 0;
    DROP = 1;
    PASS = 2;
    TX = 3;
    REDIRECT = 4;
    DISPATCHER_RETURN = 31;
}

message LoadRequest {
    string path = 1;
    string section_name = 2;
    ProgramType program_type = 3;
    int32 priority = 4;
    string iface = 5;
    repeated ProceedOn proceed_on = 6;
}

message LoadResponse {
    string id = 1;
}

message UnloadRequest {
    string iface = 1;
    string id = 2;
}

message UnloadResponse {}

message ListRequest {
    string iface = 1;
}

message ListResponse {
  string xdp_mode = 1;
  message ListResult {
    string id = 1;
    string name = 2;
    uint32 position = 3;
    int32 priority = 4;
    string path = 5;
    repeated ProceedOn proceed_on = 6;
  }
  repeated ListResult results = 2;
}

message GetMapRequest {
    string iface = 1;
    string id = 2;
    string map_name = 3;
    string socket_path = 4;
}

message GetMapResponse {}
